--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,7 +18,5 @@
         android:id="@+id/tag"
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_0">
-
-    </>
+        android:layout_height="@dimen/dp_0"/>
 </LinearLayout>
