--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:background="#673AB7"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#673AB7"
+    android:orientation="vertical"
     tools:context=".view.LoginActivity">
+
     <LinearLayout
 
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="30dp">
+        android:layout_height="30dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/bake"
@@ -25,58 +25,66 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="10" />
-        <ImageButton
-android:background="#05FFFFFF"
-            android:id="@+id/button"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-    <EditText
-        android:layout_margin="@dimen/dp_20"
-        android:layout_marginTop="200dp"
-        android:maxLength="17"
-        android:id="@+id/username"
-        android:maxLines="1"
-        android:hint="用户名"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:layout_margin="@dimen/dp_20"
+        <ImageButton
+            android:id="@+id/button"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#05FFFFFF" />
+    </LinearLayout>
+<ImageView
+    android:src="@drawable/xingf"
+    android:id="@+id/sdv"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/dp_100" />
+    <EditText
+        android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_20"
+        android:layout_marginTop="200dp"
+        android:hint="用户名"
+        android:maxLength="17"
+        android:maxLines="1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_20"
         android:orientation="horizontal">
 
         <EditText
             android:id="@+id/password"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:hint="密码"
             android:inputType="textPassword"
             android:maxLength="17"
-            android:maxLines="1"
-            android:hint="密码"
-            android:layout_weight="5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:maxLines="1" />
+
         <Button
             android:id="@+id/forget_password"
-            android:text="忘记密码"
-            android:layout_weight="2"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="忘记密码" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/sign_up_now"
-        android:paddingLeft="290dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="290dp"
         android:text="暂无账号 立即注册"
         android:textColor="#00BCD4" />
+
     <Button
-        android:layout_margin="@dimen/dp_20"
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_44"
+        android:layout_margin="@dimen/dp_20"
         android:background="#D81BAF"
         android:text="登录" />
 
@@ -89,10 +97,10 @@ android:background="#05FFFFFF"
         android:textSize="20sp" />
 
     <ImageButton
-        android:layout_margin="@dimen/dp_20"
         android:id="@+id/we_chat"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_44"
+        android:layout_margin="@dimen/dp_20"
         android:background="#27A324"
         android:src="@drawable/weixin_copy_3" />
 </LinearLayout>
