--- a/app/src/main/res/layout/fragment_film.xml
+++ b/app/src/main/res/layout/fragment_film.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,7 +18,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/back" />
+            android:background="@drawable/dww"  />
 
         <TextView
             android:layout_width="0dp"
@@ -44,7 +45,23 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+<com.stx.xhb.xbanner.XBanner
+    android:layout_marginLeft="@dimen/dp_30"
+    android:layout_marginRight="@dimen/dp_30"
+    android:layout_marginTop="@dimen/dp_10"
+    app:AutoPlayTime="3000"
+    app:isShowNumberIndicator="true"
+    app:pointsPosition="RIGHT"
+    app:tipTextSize="20dp"
+    app:isAutoPlay="true"
+    app:isClipChildrenMode="true"
+    android:id="@+id/home_banner"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/dp_200">
+
+</com.stx.xhb.xbanner.XBanner>
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/hot"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -78,6 +95,7 @@
             </androidx.recyclerview.widget.RecyclerView>
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/coming"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -110,6 +128,7 @@
             </androidx.recyclerview.widget.RecyclerView>
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/popular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
